@@ -688,6 +688,9 @@ extern int compareIDs (id, id);
 //F: A routine for comparing integers.
 extern int compareIntegers (id, id);
 
+//F: A routine for comparing unsigned integers.
+extern int compareUnsigned (id, id);
+
 @protocol CompareFunction
 //S: Interface for defining the compare function to use when comparing
 //S: to members in a collection.
