@@ -1,5 +1,7 @@
 1999-01-14  Marcus G. Daniels  <mgd@chama.santafe.edu>
 
+	* Map.m, collections.h (compareUnsigned): New function.
+
 	* Collection.[hm], Map.[hm]: Always declare hdf5Out:deep:. Don't
 	include swarmconfig.h.  Call hdf5_not_available when HAVE_HDF5 not
 	defined.
